--- a/frontend/interview-prep-ai/index.html
+++ b/frontend/interview-prep-ai/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Add this to your public/index.html -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interview Prep AI</title>
+    <script src="https://unpkg.com/@vapi-ai/web@2.5.1/dist/vapi-web.umd.js"></script>
   </head>
   <body>
     <div id="root"></div>
